2014-02-17  Jamison Hope  <jrh@theptrgroup.com>

	* standard/ImportFromLibrary.java (SRFI97Map): Update for SRFI-87
	and SRFI-98 which are now builtins.

2014-02-17  Per Bothner  <per@bothner.com>

	* Shell.java: Add ExitCalled support.
	* repl.java: Likewise.
	* standard/Scheme.java (initScheme): Define 'emergency-exit'.

2014-02-16  Per Bothner  <per@bothner.com>

	* lang/Translator.java: Make sure Error is uncaught or re-thrown.
	* standard/Scheme.java: Likewise.
	* standard/constant_fold.java: Likewise.
	* standard/load.java: Likewise.
	* standard/require.java: Likewise.

	* lang/AutoloadProcedure.java: Simplify as we now require Java5.

2014-02-12  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Define 'pipe-process'.

2014-02-06  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Define 'current-path'.

2014-01-02  Per Bothner  <per@bothner.com>

	* repl.java: Update year to 2014.

	* standard/Scheme.java (initScheme): Remove 'simple-guard',
	since re-implemented 'guard' is (almost) equally simple.

2013-12-22  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Add 'run-process',
	'process-exit-wait', 'process-exit-ok?', '&cmd', '&`', '&sh'.

2013-12-21  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): New procedures 'path-bytes'
	and 'path-data'.  New named quasi-literals 'PD' and '<'.

2013-12-20  Per Bothner  <per@bothner.com>

	* lang/TemplateScope.java: Make writeExternal/readExternal work
	for a TemplateScope from a ModuleLevel macro - the important case
	for compiling macro-generating macros.

	* lang/SyntaxTemplate.java (convert_template):  Check for cycle
	before (rather than after) dereferencing SyntaxForms. This fixes
	Savannah bug #40869 "self-referential (cyclic) syntax template".

	* lang/SyntaxTemplate.java (seen): Unconditionally
	assume availability of java.util.IdentityHashMap.

2013-12-15  John Tobey <jtobey@john-edwin-tobey.org>
